mostly completed mediascreen flex content, it's kindof weird, i'm hoping it looks better on mobile because chrome is super buggy

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     width: 100%;
     display: flex;
     position: relative;
-    left: -7.9%;
+    /* left: -10%; */
     justify-content: center;
     flex-direction: row;
     align-content: center;
@@ -417,6 +417,7 @@ form {
         flex-direction: column;
         /* margin-right:10px; */
         flex-shrink: 3;
+        align-content: center;
     }
     .header {
         display: flex;
@@ -443,6 +444,7 @@ form {
     /* margin-left:10px; */
     /* margin-right:5px; */
     flex-shrink: 3;
+    align-content: center;
 }
     .card {
         flex-direction: column;
@@ -450,6 +452,7 @@ form {
         justify-content: center;
         text-align: center;
         flex-shrink: 3;
+        align-items: center;
     }
     /* .card-image{
         display:flex;
@@ -483,7 +486,17 @@ form {
         display:flex;
         flex-wrap:wrap;
     }
-
+    .card .card-content {
+        padding: 24px;
+        display: flex;
+        border-radius: 0 0 2px 2px;
+        width: 50%;
+        flex-direction: column;
+        flex-shrink: 1;
+        align-content: center;
+        align-items: center;
+        justify-content: center;
+    }
 
     #innerBody {
         /* width: 100%; */
